--- a/index.html
+++ b/index.html
@@ -66,125 +66,174 @@
                         <div class="carousel-item active">
                             <!-- <img src="..." class="d-block w-100" alt="..."> -->
                             <!-- Instead of image, div with style and min-height -->
-                            <div style="min-height: 200px;">
-                                <div class="carousel-caption d-block">
-                                    <p class="fs-4">"I spent a lot of time planning and I couldn't even start
-                                        programming. [...] I felt so bad because of it." </p>
+                            <div class="container">
+                                <div style="min-height: 250px;">
+                                    <div class="carousel-caption d-block">
+                                        <p class="fs-4">"I spent a lot of time planning and I couldn't even start
+                                            programming. [...] I felt so bad because of it." </p>
+                                    </div>
                                 </div>
-                            </div><!-- end of div style min-height: 200px; -->
+                            </div><!-- end of div style min-height: 250px; -->
                         </div>
                         <div class="carousel-item">
                             <!-- Instead of image, div with style and min-height -->
-                            <div style="min-height: 200px;">
-                                <div class="carousel-caption d-block">
-                                    <p class="fs-4">"When I struggle, [...] I'm inclining towards not getting a good
-                                        grade rather than getting a good grade." </p>
+                            <div class="container">
+                                <div style="min-height: 250px;">
+                                    <div class="carousel-caption d-block">
+                                        <p class="fs-4">"When I struggle, [...] I'm inclining towards not getting a good
+                                            grade rather than getting a good grade." </p>
+                                    </div>
                                 </div>
-                            </div><!-- end of div style min-height: 200px; -->
+                            </div><!-- end of div style min-height: 250px; -->
                         </div>
                         <div class="carousel-item">
                             <!-- Instead of image, div with style and min-height -->
-                            <div style="min-height: 200px;">
-                                <div class="carousel-caption d-block">
-                                    <p class="fs-4">"When I don't know where to begin or what I should write down
-                                        first
-                                        or import some data, I just feel like, 'oh, I'm really bad on programing.'"
+                            <div class="container">
+                                <div style="min-height: 250px;">
+                                    <div class="carousel-caption d-block">
+                                        <p class="fs-4">"When I don't know where to begin or what I should write down
+                                            first
+                                            or import some data, I just feel like, 'oh, I'm really bad on programing.'"
+                                    </div>
                                     </p>
                                 </div>
-                            </div><!-- end of div style min-height: 200px; -->
+                            </div><!-- end of div style min-height: 250px; -->
                         </div>
                         <div class="carousel-item">
                             <!-- Instead of image, div with style and min-height -->
-                            <div style="min-height: 200px;">
-                                <div class="carousel-caption d-block">
-                                    <p class="fs-4">"So if I look for help, it's because something is wrong. So this
-                                        is
-                                        a red flag that I really did not understand the content very well or I'm
-                                        doing
-                                        badly on the assignment." </p>
+                            <div class="container">
+                                <div style="min-height: 250px;">
+                                    <div class="carousel-caption d-block">
+                                        <p class="fs-4">"So if I look for help, it's because something is wrong. So this
+                                            is
+                                            a red flag that I [...] did not understand the content [...] or I'm
+                                            doing
+                                            badly." </p>
+                                    </div>
                                 </div>
-                            </div><!-- end of div style min-height: 200px; -->
+                            </div><!-- end of div style min-height: 250px; -->
                         </div>
                         <div class="carousel-item">
                             <!-- Instead of image, div with style and min-height -->
-                            <div style="min-height: 200px;">
-                                <div class="carousel-caption d-block">
-                                    <p class="fs-4">"I felt like I was behind and other people wouldn't take [...]
-                                        as
-                                        long." </p>
+                            <div class="container">
+                                <div style="min-height: 250px;">
+                                    <div class="carousel-caption d-block">
+                                        <p class="fs-4">"I felt like I was behind and other people wouldn't take [...]
+                                            as
+                                            long." </p>
+                                    </div>
                                 </div>
-                            </div><!-- end of div style min-height: 200px; -->
+                            </div><!-- end of div style min-height: 250px; -->
                         </div>
                         <div class="carousel-item">
                             <!-- Instead of image, div with style and min-height -->
-                            <div style="min-height: 200px;">
-                                <div class="carousel-caption d-block">
-                                    <p class="fs-4">"Having to use an outside resource [...] maybe I shouldn't have
-                                        to
-                                        use makes me feel like I could do better." </p>
+                            <div class="container">
+                                <div style="min-height: 250px;">
+                                    <div class="carousel-caption d-block">
+                                        <p class="fs-4">"Having to use an outside resource [...] maybe I shouldn't have
+                                            to
+                                            use makes me feel like I could do better." </p>
+                                    </div>
                                 </div>
-                            </div><!-- end of div style min-height: 200px; -->
+                            </div><!-- end of div style min-height: 250px; -->
                         </div>
                         <div class="carousel-item">
                             <!-- Instead of image, div with style and min-height -->
-                            <div style="min-height: 200px;">
-                                <div class="carousel-caption d-block">
-                                    <p class="fs-4">"I just have to [...] throw it all away and it just feels [...]
-                                        wasteful." </p>
+                            <div class="container">
+                                <div style="min-height: 250px;">
+                                    <div class="carousel-caption d-block">
+                                        <p class="fs-4">"I just have to [...] throw it all away and it just feels [...]
+                                            wasteful." </p>
+                                    </div>
                                 </div>
-                            </div><!-- end of div style min-height: 200px; -->
+                            </div><!-- end of div style min-height: 250px; -->
                         </div>
                         <div class="carousel-item">
                             <!-- Instead of image, div with style and min-height -->
-                            <div style="min-height: 200px;">
-                                <div class="carousel-caption d-block">
-                                    <p class="fs-4">"If I'm really doing well, maybe I would just be able to figure
-                                        it
-                                        out as I'm coding and not have to stop." </p>
+                            <div class="container">
+                                <div style="min-height: 250px;">
+                                    <div class="carousel-caption d-block">
+                                        <p class="fs-4">"If I'm really doing well, maybe I would just be able to figure
+                                            it
+                                            out as I'm coding and not have to stop." </p>
+                                    </div>
                                 </div>
-                            </div><!-- end of div style min-height: 200px; -->
+                            </div><!-- end of div style min-height: 250px; -->
                         </div>
                         <div class="carousel-item">
                             <!-- Instead of image, div with style and min-height -->
-                            <div style="min-height: 200px;">
-                                <div class="carousel-caption d-block">
-                                    <p class="fs-4">"It feels like we’re competing with some geniuses and [...] I’m
-                                        thinking like,
-                                        'oh,
-                                        those people who try this assignment, they would understand it right away.
-                                        Why
-                                        am I
-                                        not
-                                        doing
-                                        that?'"</p>
+                            <div class="container">
+                                <div style="min-height: 250px;">
+                                    <div class="carousel-caption d-block">
+                                        <p class="fs-4">"I [think] that programmers need to know every single little
+                                            piece of
+                                            syntax and every code and how to at least start doing everything."
+                                        </p>
+                                    </div>
                                 </div>
-                            </div><!-- end of div style min-height: 200px; -->
+                            </div><!-- end of div style min-height: 250px; -->
                         </div>
                         <div class="carousel-item">
                             <!-- Instead of image, div with style and min-height -->
-                            <div style="min-height: 200px;">
-                                <div class="carousel-caption d-block">
-                                    <p class="fs-4">"The professor always tells me, your code wouldn’t run if you [had
-                                        ...] one
-                                        parenthesis
-                                        mismatch. And that’s really important that it runs. So I kind of learned that
-                                        errors
-                                        are
-                                        actually really critical."</p>
+                            <div class="container">
+                                <div style="min-height: 250px;">
+                                    <div class="carousel-caption d-block">
+                                        <p class="fs-4">"I don't know if I'm just struggling and everyone else is
+                                            breezing
+                                            through it [...] I feel like I'm not as smart as everyone else."
+                                        </p>
+                                    </div>
                                 </div>
-                            </div><!-- end of div style min-height: 200px; -->
+                            </div><!-- end of div style min-height: 250px; -->
                         </div>
                         <div class="carousel-item">
                             <!-- Instead of image, div with style and min-height -->
-                            <div style="min-height: 200px;">
-                                <div class="carousel-caption d-block">
-                                    <p class="fs-4">"You think to yourself, 'oh, I should be understanding how to fix
-                                        this. My
-                                        friend
-                                        would
-                                        just do this right away.'" </p>
+                            <div class="container">
+                                <div style="min-height: 250px;">
+                                    <div class="carousel-caption d-block">
+                                        <p class="fs-4">"It feels like we’re competing with some geniuses and [...] I’m
+                                            thinking,
+                                            '[...] they would understand it right
+                                            away.
+                                            Why
+                                            am I
+                                            not
+                                            doing
+                                            that?'"</p>
+                                    </div>
                                 </div>
-                            </div><!-- end of div style min-height: 200px; -->
+                            </div><!-- end of div style min-height: 250px; -->
+                        </div>
+                        <div class="carousel-item">
+                            <!-- Instead of image, div with style and min-height -->
+                            <div class="container">
+                                <div style="min-height: 250px;">
+                                    <div class="carousel-caption d-block">
+                                        <p class="fs-4">"The professor always tells me, your code wouldn’t run if you
+                                            [had
+                                            ...] one
+                                            parenthesis mismatch. So I
+                                            learned that
+                                            errors
+                                            are
+                                            actually really critical."</p>
+                                    </div>
+                                </div>
+                            </div><!-- end of div style min-height: 250px; -->
+                        </div>
+                        <div class="carousel-item">
+                            <!-- Instead of image, div with style and min-height -->
+                            <div class="container">
+                                <div style="min-height: 250px;">
+                                    <div class="carousel-caption d-block">
+                                        <p class="fs-4">"You think to yourself, 'oh, I should be understanding how to
+                                            fix
+                                            this. My
+                                            friendwould
+                                            just do this right away.'" </p>
+                                    </div>
+                                </div>
+                            </div><!-- end of div style min-height: 250px; -->
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#quote-carousel"
